app/static/style.css
* {
    font-size: 100%;
    font-family: "Avenir Next", sans-serif;
}

.app-container {
    text-align: right;
}

.app {
    display: inline-block;
    margin-right: 46.5%
}

a:link {
    color: white;
    text-decoration-line: none;
}

a:visited {
    color: white;
    text-decoration-line: none;
}

a:hover {
    color: lightgray;
    text-decoration-line: none;
}

a:active {
    color: lightgray;
    text-decoration-line: none;
}

.base-header {
    font-size: 40px;
    color: #007dc3;
    display: inline-block;
}

.graph-link-container {
    display: inline-block;
    border-radius: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
    background-color: #007dc3;
    margin-top: 20px;
    margin-bottom: 20px;
    margin-right: 83%;
    color: white;
    text-align: left;
    width: 100px
}

.graph-link {
    padding: 10px 22px 10px 30px;
}

.graph-container {
    text-align: center;
}

.graph-content-container {
    text-align: center;
}

.graph-content {
    display: inline-block;
}

.hb-selector {
    text-align: right;
}

.map-selector {
    display: inline-block;
    text-align: left;
}

.map-text {
    display: inline-flex;
    width: 50%;
    text-align: left;
    margin-left: 50%;
}

.map-container {
    text-align: right;
}
.map-link-container {
    display: inline-block;
    border-radius: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
    background-color: #007dc3;
    margin-top: 20px;
    margin-bottom: 20px;
    color: white;
    text-align: left;
    width: 150px
}

.map-link {
    padding: 10px 22px 10px 30px;
}

.map-content-container {
    text-align: right;
}

